--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 <head>
-<title>Historical Games a Games Category Flat Bootstrap responsive Website Template | Home :: w3layouts</title>
+<title>AKF战队</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Historical Games Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
