--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="cn">
 <head>
-<title>AKF战队</title>
+<title>AKF战队官方网站</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Historical Games Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -50,13 +50,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="header-top">
 			<div class="container">
 				<div class="header-left">
-					<h1><a href="index.html">Historical <span>Games</span></a></h1>
+					<h1><a href="index.html">AKF<span>Games</span></a></h1>
 				</div>
 				<div class="header-middle">
-					<ul>
-						<li><span class="glyphicon glyphicon-phone" aria-hidden="true"></span>+123 456 7890</li>
-						<li><a href="mailto:info@example.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>info@example.com</a></li>
-					</ul>
+					
 				</div>
 				<div class="header-right">
 					<div class="search">
