--- a/index.html
+++ b/index.html
@@ -50,16 +50,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="header-top">
 			<div class="container">
 				<div class="header-left">
-					<h1><a href="index.html">AKF<span>Games</span></a></h1>
+					<h1><a href="index.html">Advance KD First<span>Games</span></a></h1>
 				</div>
 				<div class="header-middle">
 					
 				</div>
 				<div class="header-right">
-					<div class="search">
-						<form action="#" method="post">
-							<input type="search" name="Search" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}" required="">
-							<input type="submit" value=" ">
 						</form>
 					</div>
 				</div>
@@ -100,9 +96,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="banner-info">
 			<div class="container">
 				<div class="w3layouts-text">
-					<h3>Nunc eget nibh</h3>
+					<h3>欢迎访问</h3>
 					<label></label>
-					<h2>Morbi in nisl auctor</h2>
+					<h2>香肠派对AKF战队</h2>
 				</div>
 				<div class="social">
 					<ul>
