--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-rss"></i></a></li>
-						<li><a href="#"><i class="fa fa-vk"></i></a></li>
+
 					</ul>
 				</div>
 			</div>
@@ -118,16 +117,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="welcome" id="about">
 		<div class="container">
 			<div class="col-md-6 agileits_welcome_grid_left">
-				<h3>About Us!</h3>
-				<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-					sed quia consequuntur magni dolores eos qui ratione voluptatem sequi 
-					nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-					consectetur, adipisci velit. Ut enim ad minima 
-					veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, 
-					nisi ut aliquid ex ea commodi consequatur? <i>Quis autem vel eum iure 
-					reprehenderit qui in ea voluptate velit esse quam nihil molestiae 
-					consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla 
-					pariatur?</i></p>
+				<h3>关于我们</h3>
+				<p>刚刚好乳房 <i>撤人</i></p>
 			</div>
 			<div class="col-md-6 agileits_welcome_grid_right">
 				<img src="images/1.jpg" alt=" " class="img-responsive" />
@@ -139,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- services -->
 	<div class="services" id="services">
 		<div class="container">
-			<h3>Services</h3>
+			<h3>核心成员</h3>
 			<div class="agileinfo-services-grids">
 				<div class="col-md-6 services-grid">
 					<div class="services-grid1">
@@ -149,7 +140,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>repreh qui in ea voluptate</h4>
+							<h4>小跟班</h4>
 							<p>Itaque earum rerum hic tenetur a sapiente 
 								delectus, ut aut reiciendis voluptatibus maiores alias consequatur 
 								aut perferendis doloribus asperiores repellat.</p>
@@ -163,7 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>aut perferendis doloribus</h4>
+							<h4>建议封号</h4>
 							<p>Itaque earum rerum hic tenetur a sapiente 
 								delectus, ut aut reiciendis voluptatibus maiores alias consequatur 
 								aut perferendis doloribus asperiores repellat.</p>
@@ -237,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- gallery -->
 	<div id="gallery" class="gallery">
 			<div class="container">
-				<h3>Our Gallery</h3>   
+				<h3>照片</h3>   
 				<div id="jzBox" class="jzBox">
 					<div id="jzBoxNextBig"></div>
 					<div id="jzBoxPrevBig"></div>
@@ -336,7 +327,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="testimonial jarallax">
 		<div class="w3-agileits-testimonial">
 			<div class="container">
-				<h3>Testimonial</h3>
+				<h3>团队成就</h3>
 				<div class="wthree-testimonial-grid">
 						<div class="slider">
 								<div class="callbacks_container">
@@ -344,8 +335,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li>
 											<div class="testimonial-top">
 												<i class="fa fa-quote-right" aria-hidden="true"></i>
-												<p>Donec feugiat tellus sem, laoreet iaculis orci lobortis vel. Sed sed luctus orci, at lacinia risus. Ut porttitor ante ac tincidunt elementum. Curabitur ex dolor, condimentum vitae nunc vel, pulvinar semper justo. Vestibulum et aliquet magna, maximus dapibus enim. Vestibulum ex lectus, posuere eu viverra at, mattis et enim. Nam efficitur sem et lectus fringilla, at pharetra nulla luctus. Nunc cursus, augue ac ultricies volutpat, neque erat congue justo, ac pretium tellus eros a neque. Integer ipsum sem, consectetur a mollis ac, cursus eu ipsum.</p>
-												<h5>John Smith <span>- Founder</span></h5>
+												<p>我曾经一个人把LAG全队按在地上摩擦</p>
+												<h5>建议封号 <span>- 创始人</span></h5>
 											</div>
 										</li>
 										<li>
@@ -387,7 +378,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- updates -->
 	<div class="updates" id="news">
 		<div class="container">
-			<h3>News & Events</h3>
+			<h3>还没想好放什么</h3>
 			<div class="agileits_updates_grids">
 				<div class="col-md-6 agileits_updates_grid_left">
 					<h4>Latest News</h4>
@@ -441,7 +432,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!-- //modal -->
 				</div>
 				<div class="col-md-6 agileits_updates_grid_right">
-					<h4>Featured Events</h4>
+					<h4>qq告诉我</h4>
 					<ul id="flexiselDemo1">			
 						<li>
 							<img src="images/g3.jpg" alt=" " class="img-responsive" />
@@ -552,7 +543,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agileinfo-team-grids">
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t1.jpg" alt="" />
-					<h4>Mary Jane</h4>
+					<h4>小跟班</h4>
 					<p>Vestibulum</p>
 					<div class="team-social-grids">
 						<ul>
@@ -565,7 +556,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t2.jpg" alt="" />
-					<h4>Peter Parker</h4>
+					<h4>李小龙</h4>
 					<p>Vestibulum</p>
 					<div class="team-social-grids">
 						<ul>
@@ -578,7 +569,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t3.jpg" alt="" />
-					<h4>John Watson</h4>
+					<h4>占卜师</h4>
 					<p>Vestibulum</p>
 					<div class="team-social-grids">
 						<ul>
