--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="agileits-w3layouts-footer">
 		<div class="container">
 			<div class="agile-copyright">
-				<p>© 2017 Historical Games. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+				<p>© 2020 AKF Games. All rights reserved | Design by 建议封号</p>
 			</div>
 		</div>
 	</div>
