--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html" class="active">Home</a></li>
-							<li><a href="#about" class="scroll">About</a></li>
-							<li><a href="#services" class="scroll">Services</a></li>
-							<li><a href="#gallery" class="scroll">Gallery</a></li>
-							<li><a href="#news" class="scroll">News</a></li>
-							<li><a href="#team" class="scroll">Team</a></li>
+							<li><a href="#about" class="scroll">关于</a></li>
+							<li><a href="#services" class="scroll">成员</a></li>
+							<li><a href="#gallery" class="scroll">照片</a></li>
+							<li><a href="#news" class="scroll">最新</a></li>
+							<li><a href="#team" class="scroll">成就</a></li>
 							<li><a href="#contact" class="scroll">Contact Us</a></li>
 						</ul>	
 						<div class="clearfix"> </div>	
