--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!--navbar-header-->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="index.html" class="active">开始</a></li>
 							<li><a href="#about" class="scroll">关于</a></li>
 							<li><a href="#services" class="scroll">成员</a></li>
 							<li><a href="#gallery" class="scroll">照片</a></li>
