--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="col-md-6 agileits_welcome_grid_left">
 				<h3>关于我们</h3>
-				<p>刚刚好乳房 <i>撤人</i></p>
+				<p>AKF战队(Advance KD First)成立于2020年,由现任
+					队长建议封号创始,最初队名为木鱼的小跟班家
+					族,后由小跟班改名为AKF.AKF立志于成为香肠
+				        派对(SausageMan)最出色的战队,战队积极参
+					与官方赛事,并获得多个奖项. 
+					<i>AKF战队LOGO,由建议封号设计</i></p>
 			</div>
 			<div class="col-md-6 agileits_welcome_grid_right">
 				<img src="images/1.jpg" alt=" " class="img-responsive" />
