--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="header-top">
 			<div class="container">
 				<div class="header-left">
-					<h1><a href="index.html">Advance KD First<span>Games</span></a></h1>
+					<h1><a href="index.html">Advance KD First<span>Team</span></a></h1>
 				</div>
 				<div class="header-middle">
 					
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="col-md-6 agileits_welcome_grid_left">
 				<h3>关于我们</h3>
-				<p>AKF战队(Advance KD First)成立于2020年,由现任队长建议封号创始,最初队名为木鱼的小跟班家族,后由小跟班改名为AKF.AKF立志成为香肠派对(SausageMan)最出色的战队,战队积极参与官方赛事,并获得多个奖项. 
+				<p>AKF战队(Advance KD First)成立于2020年，由现任队长建议封号创始。最初队名为木鱼的小跟班家族，后由小跟班改名为AKF。AKF立志成为香肠派对(Sausage Man)最出色的战队。战队积极参与官方赛事，并获得多个奖项。
 					<i>AKF战队LOGO,由建议封号设计</i></p>
 			</div>
 			<div class="col-md-6 agileits_welcome_grid_right">
@@ -250,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g1.jpg" class="jzBoxLink item-hover" title="Maecenas sodales tortor ac ligula ultrices dictum et quis urna.">  
 								<img src="images/g1.jpg" class="img-responsive" alt=" " />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>    		
 						</div>
@@ -258,7 +258,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g2.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g2.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>    			
 						</div>
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g7.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g7.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>C点击查看</p>
 								</div> 
 							</a>    			
 						</div>
@@ -277,7 +277,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g3.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g3.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>    			
 						</div>
@@ -285,7 +285,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g4.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g4.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>    			
 						</div>
@@ -296,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g6.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g6.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>  
 						</div> 
@@ -312,7 +312,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="images/g5.jpg" class="jzBoxLink item-hover" title="Etiam pulvinar metus neque eget porttitor massa.">  
 								<img src="images/g5.jpg" alt=" " class="img-responsive" />
 								<div class="view-caption">
-									<p>Click Here</p>
+									<p>点击查看</p>
 								</div> 
 							</a>    			
 						</div> 
@@ -540,12 +540,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- team -->
 	<div class="team" id="team">
 		<div class="container">
-			<h3>Our Team</h3>
+			<h3>战队风采</h3>
 			<div class="agileinfo-team-grids">
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t1.jpg" alt="" />
-					<h4>小跟班</h4>
-					<p>Vestibulum</p>
+					<h4>AKF.小跟班</h4>
+					<p>联合创始人</p>
 					<div class="team-social-grids">
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -557,8 +557,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t2.jpg" alt="" />
-					<h4>李小龙</h4>
-					<p>Vestibulum</p>
+					<h4>AKF.建议封号</h4>
+					<p>创始人兼队长</p>
 					<div class="team-social-grids">
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -570,8 +570,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-3 wthree-team-grid">
 					<img src="images/t3.jpg" alt="" />
-					<h4>占卜师</h4>
-					<p>Vestibulum</p>
+					<h4>AKF.星途</h4>
+					<p>核心成员</p>
 					<div class="team-social-grids">
 						<ul>
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
