--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="banner-info">
 			<div class="container">
 				<div class="w3layouts-text">
-					<h3>欢迎访问</h3>
+					<h3>欢迎访问 akf666.tk</h3>
 					<label></label>
 					<h2>香肠派对AKF战队</h2>
 				</div>
