--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3layouts-text">
 					<h3>欢迎访问 akf666.tk</h3>
 					<label></label>
-					<h2>香肠派对AKF战队</h2>
+					<h2>香肠派对AKF战队官网</h2>
 				</div>
 				<div class="social">
 					<ul>
@@ -119,7 +119,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 agileits_welcome_grid_left">
 				<h3>关于我们</h3>
 				<p>AKF战队(Advance KD First)成立于2020年，由现任队长建议封号创始。最初队名为木鱼的小跟班家族，后由小跟班改名为AKF。AKF立志成为香肠派对(Sausage Man)最出色的战队。战队积极参与官方赛事，并获得多个奖项。
-					<i>AKF战队LOGO,由建议封号设计</i></p>
+					<i>AKF战队LOGO,由建议封号设计。</i></p>
 			</div>
 			<div class="col-md-6 agileits_welcome_grid_right">
 				<img src="images/1.jpg" alt=" " class="img-responsive" />
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- services -->
 	<div class="services" id="services">
 		<div class="container">
-			<h3>核心成员</h3>
+			<h3>优秀成员</h3>
 			<div class="agileinfo-services-grids">
 				<div class="col-md-6 services-grid">
 					<div class="services-grid1">
@@ -141,10 +141,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>小跟班</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-								delectus, ut aut reiciendis voluptatibus maiores alias consequatur 
-								aut perferendis doloribus asperiores repellat.</p>
+							<h4>AKF.小跟班</h4>
+							<p>游戏id dewif
+							 AKF联合创始人，核心成员，精英成员</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -155,10 +154,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>建议封号</h4>
-							<p>Itaque earum rerum hic tenetur a sapiente 
-								delectus, ut aut reiciendis voluptatibus maiores alias consequatur 
-								aut perferendis doloribus asperiores repellat.</p>
+							<h4>AKF.建议封号</h4>
+							<p>游戏id jdis
+							AKF创始人，现任队长，核心成员，</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -247,7 +245,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3ls-gallery-grids">
 					<div class="col-md-4 gallery-grid">
 						<div class="wpf-demo-4">  
-							<a href="images/g1.jpg" class="jzBoxLink item-hover" title="Maecenas sodales tortor ac ligula ultrices dictum et quis urna.">  
+							<a href="images/g1.jpg" class="jzBoxLink item-hover" title="不会是福第三方的预算">  
 								<img src="images/g1.jpg" class="img-responsive" alt=" " />
 								<div class="view-caption">
 									<p>点击查看</p>
