--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>AKF.小跟班</h4>
-							<p>游戏id dewif
-							 AKF联合创始人，核心成员，精英成员</p>
+							<h4>AKF.小跟班 ID iueff</h4>
+							<p>AKF联合创始人，核心成员，精英队员。S3赛季老玩家</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -154,9 +153,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 						<div class="col-md-8 services-grid-left agile-services-grid-left">
-							<h4>AKF.建议封号</h4>
-							<p>游戏id jdis
-							AKF创始人，现任队长，核心成员，</p>
+							<h4>AKF.建议封号 ID fdosg</h4>
+							<p>AKF创始人，现任队长，核心成员，本站管理员</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -431,16 +429,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!-- //modal -->
 				</div>
 				<div class="col-md-6 agileits_updates_grid_right">
-					<h4>qq告诉我</h4>
+					<h4>最近</h4>
 					<ul id="flexiselDemo1">			
 						<li>
-							<img src="images/g3.jpg" alt=" " class="img-responsive" />
+							<img src="images/a1.jpg" alt=" " class="img-responsive" />
 						</li>
 						<li>
-							<img src="images/g7.jpg" alt=" " class="img-responsive" />
+							<img src="images/a2.jpg" alt=" " class="img-responsive" />
 						</li>
 						<li>
-							<img src="images/g9.jpg" alt=" " class="img-responsive" />
+							<img src="images/a3.jpg" alt=" " class="img-responsive" />
 						</li>
 					</ul>
 					<script type="text/javascript">
@@ -476,13 +474,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="panel-heading" role="tab" id="headingOne">
 						  <h5 class="panel-title asd">
 							<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>assumenda est cliche reprehenderit
+							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>第一届战队赛战绩出炉
 							</a>
 						  </h5>
 						</div>
 						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 						  <div class="panel-body panel_text">
-							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+							大家都表现非常好，就小飞扬最傻缺
 						  </div>
 						</div>
 					  </div>
@@ -613,29 +611,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!-- //subscribe -->
 	<!-- contact -->
-		<div class="contact" id="contact">
-			<div class="container">
-				<h3>Contact Us</h3>   
-				<div class="contact-grids"> 
-					<div class="col-md-6 w3ls-address">
-						<h4>Get in touch with us</h4>
-						<p class="cnt-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit,sheets containing Lorem Ipsum passages sed do, At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-						<p class="address">Broome Street 21BV <br> NY 10002, Canada<br> USA </p>
-						<p>Telephone : +00 111 222 3333</p>
-						<p>FAX : +1 888 888 4444</p>
-						<p>Email : <a href="mailto:example@mail.com">mail@example.com</a></p>
-					</div> 
-					<div class="col-md-6 w3l-contact-form">
-						<form action="#" method="post">
-							<input type="text" name="Name" placeholder="Name" required="">
-							<input type="text" name="Email" placeholder="Email" required="">
-							<textarea placeholder="Message" name="Message" required=""></textarea>
-							<input type="submit" value="SUBMIT">
-						</form>
-					</div>
-					<div class="clearfix"> </div>	
-				</div>
-		
+	
 	<!-- footer -->
 	<div class="agileits-w3layouts-footer">
 		<div class="container">
