--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="cn">
 <head>
 <title>AKF战队官方网站</title>
+<link rel="icon" href="./image/favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Historical Games Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
