--- a/index.html
+++ b/index.html
@@ -340,8 +340,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li>
 											<div class="testimonial-top">
 												<i class="fa fa-quote-right" aria-hidden="true"></i>
-												<p>Pellentesque urna ex, ultricies a nunc at, pretium maximus nisi. Vestibulum non auctor diam. Mauris eget consectetur mauris. Aenean leo elit, accumsan vel elit vitae, mattis ultricies lacus. Cras consectetur justo lorem, sed dictum sapien eleifend at.Donec sed orci a dui aliquam tempor. Praesent in ipsum ut nunc porttitor lacinia.Donec eu sapien et arcu dictum rutrum.Ut laoreet vitae augue at accumsan. Nam pharetra sagittis purus et condimentum. Vestibulum cursus porttitor pretium.In egestas finibus rutrum. Nulla facilisi.</p>
-												<h5>Divide Rule <span>- CEO</span></h5>
+												<p>他们在肠岛是噩梦一般的存在</p>
+												<h5>达达 <span>- 香肠派对官方</span></h5>
+											</div>
+										</li>
+										<li>
+											<div class="testimonial-top">
+												<i class="fa fa-quote-right" aria-hidden="true"></i>
+												<p>AKF是香肠派对中不可多得的战队,我在它面前犹如弱鸡</p>
+												<h5>LAG.周星星 <span>- LAG队长</span></h5>
 											</div>
 										</li>
 									</ul>
