--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h4>Latest News</h4>
 					<div class="agileits_updates_grid_left_grid">
 						<div class="col-xs-4 agileits_updates_grid_left1">
-							<h4>15 <span>June <i>2016.</i></span></h4>
+							<h4>10 <span>6 <i>2022.</i></span></h4>
 						</div>
 						<div class="col-xs-8 agileits_updates_grid_left1">
-							<h5><a href="#" data-toggle="modal" data-target="#myModal">fugiat quo voluptas</a></h5>
-							<p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse.</p>
+							<h5><a href="#" data-toggle="modal" data-target="#myModal">夏季公约草案出炉</a></h5>
+							<a href="https://funnyfox4607.github.io/AKF.github.io/文档库.html" target="_blank">进入文档库</a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
