--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="col-xs-8 agileits_updates_grid_left1">
 							<h5><a href="#" data-toggle="modal" data-target="#myModal">夏季公约草案出炉</a></h5>
-							<a href="https://funnyfox4607.github.io/AKF.github.io/文档库.html" target="_blank">进入文档库</a>
+							<a href="https://www.showdoc.com.cn/akf666/8960693328231213" target="_blank">进入文档库(站外)</a>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
