--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="#about" class="scroll">关于</a></li>
 							<li><a href="#services" class="scroll">成员</a></li>
 							<li><a href="#gallery" class="scroll">照片</a></li>
-							<li><a href="#news" class="scroll">最新</a></li>
-							<li><a href="#team" class="scroll">成就</a></li>
-							<li><a href="#contact" class="scroll">Contact Us</a></li>
+							<li><a href="#news" class="scroll">新闻</a></li>
+							<li><a href="#team" class="scroll">风采</a></li>
+							<li><a href="#contact" class="scroll">联系</a></li>
 						</ul>	
 						<div class="clearfix"> </div>	
 					</div>
@@ -103,9 +103,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="social">
 					<ul>
-						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-
 					</ul>
 				</div>
 			</div>
@@ -333,7 +330,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li>
 											<div class="testimonial-top">
 												<i class="fa fa-quote-right" aria-hidden="true"></i>
-												<p>我曾经一个人把LAG全队按在地上摩擦</p>
+												<p>哼哼哼哼哼哼哼哼哼哼啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</p>
 												<h5>建议封号 <span>- 创始人</span></h5>
 											</div>
 										</li>
@@ -347,7 +344,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li>
 											<div class="testimonial-top">
 												<i class="fa fa-quote-right" aria-hidden="true"></i>
-												<p>AKF是香肠派对中不可多得的战队,我在它面前犹如弱鸡</p>
+												<p>AKF是香肠派对中不可多得的战队</p>
 												<h5>LAG.周星星 <span>- LAG队长</span></h5>
 											</div>
 										</li>
@@ -607,11 +604,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="jarallax  wthree-subscribe">
 		<div class="w3-agileits-testimonial subscribe-bg">
 			<div class="container">
-				<h3>Subscribe with Us</h3>
+				<h3>联系我们</h3>
 				<div class="w3-agileits-subscribe-form">
 					<form action="#" method="post">
-						<input type="text" placeholder="Email" name="Email" required="">
-						<button class="btn1">Subscribe</button>
+						<input type="text" placeholder="1142839045" name="Email" required="">
+						<button class="btn1">队长邮箱</button>
 					</form>
 				</div>
 			</div>
