--- a/competition/center.html
+++ b/competition/center.html
@@ -88,7 +88,7 @@
 				<li><a href="#score">排名</a></li>
               </ul>
             </li>
-            <li><a href="https://funnyfox4607.github.io/akf.github.io/">进入主站(维护)</a></li>
+            <li><a href="https://akf666.tk">进入主站(维护)</a></li>
           </ul>
         </div>
       </nav>
@@ -1010,7 +1010,7 @@
               </div>
               <div class="col-md-6 col-lg-6">
                 <ul class="list-unstyled">
-                  <li><a target="_blank" href="https://funnyfox4607.github.io/akf.github.io/">进入主站(维护)</a></li>
+                  <li><a target="_blank" href="https://akf666.tk">进入主站(维护)</a></li>
               <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=0SyfXLdsMNF4RnojIn_WlD6ZsKalwVac&jump_from=webapi&authKey=0436KvQqI2t1sORsHdTs0NcJhinVXBY0J87cjy6mLwuRxjtDOe73pZTFJinEAfIE" class="text-secondary px-0 pl-0" target="_blank"><span class="icon-qq"></span></a></li>
               <li><a href="visit.html" target="_blank" class="text-secondary px-0 pl-0"><span class="icon-weixin"></span></a></li>
                
