--- a/competition/center.html
+++ b/competition/center.html
@@ -88,7 +88,7 @@
 				<li><a href="#score">排名</a></li>
               </ul>
             </li>
-            <li><a href="https://akf666.tk">进入主站(维护)</a></li>
+            <li><a target="_blank" href="https://akf666.tk">进入主站(维护)</a></li>
           </ul>
         </div>
       </nav>
