--- a/competition/center.html
+++ b/competition/center.html
@@ -42,7 +42,7 @@
 		          <div class="container">
           <div class="row align-items-center">
             <div class="col-6 col-md-3 offset-md-0">
-<audio src="Numb.mp3" loop="loop" controls="controls" autoplay="autoplay" preload="auto"></audio>
+<audio src="Nmp3" loop="loop" controls="controls" autoplay="autoplay" preload="auto"></audio>
 
 			
 
@@ -97,7 +97,7 @@
 
 
     <div class="slide-one-item home-slider owl-carousel">
-      <div class="site-blocks-cover overlay" style="background-image: url(images/bg1.png);" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="site-blocks-cover overlay" style="background-image: url(images/bg1.webp);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
@@ -109,7 +109,7 @@
         </div>
       </div>  
 
-      <div class="site-blocks-cover overlay" style="background-image: url(images/bg2.png);" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="site-blocks-cover overlay" style="background-image: url(images/bg2.webp);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
@@ -121,7 +121,7 @@
         </div>
       </div>  
 
-      <div class="site-blocks-cover overlay" style="background-image: url(images/bg3.png);" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="site-blocks-cover overlay" style="background-image: url("images/bg3.webp");" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
@@ -947,7 +947,7 @@
                 <img src="images/img_1.jpg" alt="Image" class="img-fluid">
               </div>
               <div class="text p-4">
-                <h2 class="h5 text-black"><a href="#team">第二届战队友谊赛亚军</a></h2>
+                <h2 class="h5 text-black"><a href="#team">第二届战队友谊赛冠军</a></h2>
                 <span class="text-uppercase date d-block mb-3"><small>建议封号</small></span>
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex corrupti perspiciatis.</p>
               </div>
@@ -959,7 +959,7 @@
                 <img src="images/img_2.jpg" alt="Image" class="img-fluid">
               </div>
               <div class="text p-4">
-                <h2 class="h5 text-black"><a href="#team">第二届战队友谊赛冠军</a></h2>
+                <h2 class="h5 text-black"><a href="#team">第二届战队友谊赛亚军</a></h2>
                 <span class="text-uppercase date d-block mb-3"><small>建议封号</small></span>
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat beatae doloremque, ex corrupti perspiciatis.</p>
               </div>
