--- a/competition/center.html
+++ b/competition/center.html
@@ -194,7 +194,7 @@
           
         </div>
 
-        <div class="bg-image overlay-success rounded mb-5" style="background-image: url('images/bg4.png');" data-stellar-background-ratio="0.5">
+        <div class="bg-image overlay-success rounded mb-5" style="background-image: url('images/bg4.jpg');" data-stellar-background-ratio="0.5">
           
           <div class="row align-items-center">
             <div class="col-md-12 col-lg-4 mb-4 mb-lg-0">
@@ -741,7 +741,7 @@
       </div>
     </div>
 
-    <div class="site-section block-13 bg-primary fixed overlay-primary bg-image" style="background-image: url('images/time.png');"  data-stellar-background-ratio="0.5">
+    <div class="site-section block-13 bg-primary fixed overlay-primary bg-image" style="background-image: url('images/time.jpg');"  data-stellar-background-ratio="0.5">
 
       <div class="container">
         <div class="row mb-5">
@@ -756,7 +756,7 @@
           <!-- uses .block-12 -->
           <div class="block-12">
             <figure>
-              <img src="images/time.png" alt="Image" class="img-fluid">
+              <img src="images/time.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -771,7 +771,7 @@
         <div class="item">
           <div class="block-12">
             <figure>
-              <img src="images/bg1.png" alt="Image" class="img-fluid">
+              <img src="images/bg1.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -786,7 +786,7 @@
         <div class="item">
           <div class="block-12">
             <figure>
-              <img src="images/bg2.png" alt="Image" class="img-fluid">
+              <img src="images/bg2.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -801,7 +801,7 @@
         <div class="item">
           <div class="block-12">
             <figure>
-              <img src="images/bg3.png" alt="Image" class="img-fluid">
+              <img src="images/bg3.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -861,7 +861,7 @@
         <div class="item">
           <div class="block-12">
             <figure>
-              <img src="images/video.png" alt="Image" class="img-fluid">
+              <img src="images/video.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -876,7 +876,7 @@
           <!-- uses .block-12 -->
           <div class="block-12">
             <figure>
-              <img src="images/bg4.png" alt="Image" class="img-fluid">
+              <img src="images/bg4.jpg" alt="Image" class="img-fluid">
             </figure>
             <div class="text">
               <span class="meta">May 20th 2018</span>
@@ -1030,7 +1030,7 @@
 
               <div class="block-16">
                 <figure>
-                  <img src="images/video.png" alt="Image placeholder" class="img-fluid rounded">
+                  <img src="images/video.jpg" alt="Image placeholder" class="img-fluid rounded">
                   <a href="https://www.bilibili.com/video/BV178411Y7QB/?share_source=copy_web&vd_source=1ee4c65ffd6647dbc7806c0fc57652dd" class="play-button popup-vimeo"><span class="icon-play"></span></a>
                 </figure>
               </div>
