--- a/competition/center.html
+++ b/competition/center.html
@@ -179,7 +179,7 @@
             <div id="date-countdown"></div>
           </div>
 
-          <div class="ml-auto pr-4 order-md-2">
+          <div class="ml-auto pr-0 order-md-2">
             <div class="h5 text-black text-uppercase text-center text-lg-left">
               <div class="d-block d-md-inline-block mb-3 mb-lg-0">
                 <img src="images/img_1_sq.jpg" alt="Image" class="mr-3 image"><span class="d-block d-md-inline-block ml-0 ml-md-3 ml-lg-0">徐郑 </span>
@@ -1046,7 +1046,7 @@
           <div class="col-md-12">
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            © 2022 AKF Games. Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Design <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://space.bilibili.com/470078495" target="_blank" >建议封号_</a>
+            © AKF Games. Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Design <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://space.bilibili.com/470078495" target="_blank" >建议封号_</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
