--- a/competition/center.html
+++ b/competition/center.html
@@ -64,13 +64,13 @@
 
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children active">
-              <a>更多</a>
+              <a>详情</a>
               <ul class="dropdown arrow-top">
                 <li><a href="#">首页</a></li>
                 <li><a href="https://forms.office.com/r/0AiNvKZgyh" target="_blank">报名通道</a></li>
                 <li><a href="#">宣传图册</a></li>
                 <li class="has-children">
-                  <a href="#">其他</a>
+                  <a href="#">未开发</a>
                   <ul class="dropdown">
                     <li><a href="#">一</a></li>
                     <li><a href="#">二</a></li>
@@ -82,6 +82,7 @@
             <li class="has-children">
               <a href="#">赛事中心</a>
               <ul class="dropdown arrow-top">
+                <li><a>建议电脑端或横屏观看网页</a></li>
                 <li><a href="#new">最新比赛</a></li>
                 <li><a href="#team">选手/小组</a></li>
                 <li><a href="#time">高光时刻</a></li>
