--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html" class="active">开始</a></li>
-							 <li><a href="competition/center.html">最新比赛</a></li>
+							 <li><a href="competition/center.html">赛事中心</a></li>
 							<li><a href="#services" class="scroll">成员</a></li>
 							<li><a href="#gallery" class="scroll">照片</a></li>
 							<li><a href="#news" class="scroll">新闻</a></li>
