--- a/competition/center.html
+++ b/competition/center.html
@@ -42,7 +42,7 @@
 		          <div class="container">
           <div class="row align-items-center">
             <div class="col-6 col-md-3 offset-md-0">
-<audio src="Numb.mp3" loop="loop" controls="controls" autoplay="autoplay" preload="auto"></audio>
+<audio src="Numb.mp3" loop="loop" controls="controls" preload="auto"></audio>
 
 			
 
@@ -102,9 +102,9 @@
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
-              <h1 class="bg-text-line">第二届</h1>
-				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad maxime velit nostrum praesentium voluptatem. Mollitia perferendis dolore dolores.</p>
-              <p><a href="#" class="btn btn-primary btn-sm rounded-0 py-3 px-5">了解</a></p>
+              <h1 class="bg-text-line">第二届战队友谊赛 介绍</h1>
+				<p class="mt-4">AKF战队友谊赛一年仅有两次，是AKF战队标准最高、最盛大的赛事。AKF第二届战队友谊赛将在2023年1月寒假期间开赛，本届赛事属于公益赛事，可免费报名参加。参赛报名请见本页面右上角。</p>
+              <p><a href="#" class="btn btn-primary btn-sm rounded-0 py-3 px-5">同意</a></p>
             </div>
           </div>
         </div>
@@ -114,9 +114,9 @@
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
-              <h1 class="bg-text-line">第二届友谊赛</h1>
-				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad maxime velit nostrum praesentium voluptatem. Mollitia perferendis dolore dolores.</p>
-              <p><a href="#" class="btn btn-primary btn-sm rounded-0 py-3 px-5">了解</a></p>
+              <h1 class="bg-text-line">第二届友谊赛 报名资格</h1>
+				<p class="mt-4">参加本届战队友谊赛必须符合以下要求。是队内正式成员或特邀选手；参赛账号无违规记录；报名单提交并通过审核；遵守赛事规则，配合裁判组工作。</p>
+              <p><a href="https://forms.office.com/r/0AiNvKZgyh" target="_blank" class="btn btn-primary btn-sm rounded-0 py-3 px-5">报名</a></p>
             </div>
           </div>
         </div>
@@ -126,9 +126,9 @@
         <div class="container">
           <div class="row align-items-center justify-content-start">
             <div class="col-md-6 text-center text-md-left" data-aos="fade-up" data-aos-delay="400">
-              <h1 class="bg-text-line">第二届友谊赛</h1>
-				<p class="mt-4">666你们是我气得我都和我IU代号为对玩具丢诶大家</p>
-              <p><a href="#" class="btn btn-primary btn-sm rounded-0 py-3 px-5">了解</a></p>
+              <h1 class="bg-text-line">第二届友谊赛 其它</h1>
+				<p class="mt-4">申请摄像、解说、转载、授权、合作等事项请联系队长邮箱。</p>
+              <p><a href="https://space.bilibili.com/470078495" target="_blank" class="btn btn-primary btn-sm rounded-0 py-3 px-5">联系</a></p>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <div class="text">
                 <h2 class="h5 text-white">第一届战队友谊赛</h2>
                 <p>AKF的开始！非常精彩，它使我的山雀起立！让我们欢呼OHHHHHHHH！！！</p>
-                <p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">了解更多</a></p>
+                <!--<p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">了解更多</a></p>-->
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
               <div class="text">
                 <h2 class="h5 text-white">第二届战队友谊赛</h2>
                 <p>未开始！2023年1月不见不散！</p>
-                <p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">了解更多</a></p>
+                <!--<p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">了解更多</a></p>-->
               </div>
             </div>
           </div>
@@ -162,7 +162,7 @@
               <div class="text">
                 <h2 class="h5 text-white">第三届战队友谊赛</h2>
                 <p>何时开赛？时间你来定！很过分合伙人的供热供热个人各该如何让他很突然</p>
-                <p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">Read More</a></p>
+                <!--<p class="mb-0"><a href="#" class="btn btn-primary btn-sm px-4 py-2 rounded-0">Read More</a></p>-->
               </div>
             </div>
           </div>
