--- a/competition/center.html
+++ b/competition/center.html
@@ -68,7 +68,7 @@
               <ul class="dropdown arrow-top">
                 <li><a href="#">首页</a></li>
                 <li><a href="https://forms.office.com/r/0AiNvKZgyh" target="_blank">报名通道</a></li>
-                <li><a href="#">宣传图册</a></li>
+                <li><a href="guide.html">文档库</a></li>
                 <li class="has-children">
                   <a href="#">未开发</a>
                   <ul class="dropdown">
