--- a/competition/guide.html
+++ b/competition/guide.html
@@ -12,7 +12,8 @@
 	<br>
     宣传图册<br><br>
 		
-<a href="#">没有</a>
+<a href="2/1.jpg" target="_blank">第一页</a><br>
+<a href="2/3.jpg" target="_blank">第三页</a><br>
 <body>
 </body>
 </html>
